# sage-one-tree-planted-hackathon-2022

./: .dockerignore  .gitignore  Dockerfile  README.md  cache_data.py  pyproject.toml  requirements.in  requirements.txt
sage_one_tree_planted/data/: climate_and_economic_justice_dataset.py
sage_one_tree_planted/notebooks/: Canopy_data_exploration.ipynb  EDA_demo.ipynb  interactive_notebook.ipynb
static_data/: census_tract_centres.csv  city_centres.csv  county_centres.csv  state_centres.csv
