[tool.poetry]
name = "sage-one-tree-planted-hackathon-2022"
version = "0.1.0"
description = "Code for working with and aggregating data from https://screeningtool.geoplatform.gov/en/methodology"
authors = ["Jeremiah Edwards <jeremiah.edwards@sage.com>"]

[tool.poetry.dependencies]
python = ">=3.10,<3.11"
geopandas ="^0.10.2"
jupyter = "^1.0.0"
numpy = "^1.22.3"
pandas = "^1.4.2"
scikit-learn = "^1.0.2"
scipy = "^1.8.0"
folium = "^0.12.1"
rasterio = {version = "1.3b1", allow-prereleases = true}
contextily = "^1.2.0"
matplotlib-scalebar = "^0.8.1"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
